speechSynthesis.speak of a zero length utterance kills future speech https://bugs.webkit.org/show_bug.cgi?id=129403

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Empty length strings may choke a synthesizer and result in didFinishSpeaking not being called.
The WebKit code should be proactive about screening out empty length strings.

Test: platform/mac/fast/speechsynthesis/speech-synthesis-speak-empty-string.html

* Modules/speech/SpeechSynthesis.cpp:
(WebCore::SpeechSynthesis::startSpeakingImmediately):

LayoutTests:

* platform/mac/fast/speechsynthesis/speech-synthesis-speak-empty-string-expected.txt: Added.
* platform/mac/fast/speechsynthesis/speech-synthesis-speak-empty-string.html: Added.


Canonical link: https://commits.webkit.org/147495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164807 268f45cc-cd09-0410-ab3c-d52691b4dbfc